@@ -1,3 +1,12 @@
+2009-05-06  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	Revert:
+	2009-05-03  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* acinclude.m4 ([GLIBCXX_ENABLE_ATOMIC_BUILTINS]): Do link tests when
+	possible.
+	* configure: Regenerate.
+
 2009-05-05  Jonathan Wakely  <jwakely.gcc@gmail.com>
 
 	PR libstdc++/39909
